# tryit

./: .gitignore  CMakeLists.txt  Intrinsics.yml  Makefile  a  a.cpp  b  b.cpp  c.cpp  d.cpp  pcd_read.cpp  pcl_types.h  r.cpp  test_pcd.pcd  y.cpp
b.dSYM/Contents/Resources/DWARF/: b
bazel_ws/test_project/: .gitignore  bazel-bin  bazel-genfiles  bazel-out  bazel-test_project  bazel-testlogs
bazel_ws/test_project/lib/: BUILD  hellogreet.cc
bazel_ws/test_project/main/: BUILD  hellotime.cc  hellotime.h  helloworld.cc
cc/: CMakeLists.txt  CMakeLists.txt.boost  a.xml  boostt.cc  clientt.cc  convt.cc  eigen.cc  eigent.cc  mapt.cc  pc_reader.cc  sockett.cc  torcht.cc  xml_read.cc
cudat/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.txt  cmake_install.cmake  cv_test.cu  l_vec_add.cu  main  main.cu  nms2.cu  nms_test.cu  nmsss
haikangvision/: main.cc
include/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
onnx/: .gitignore  a.onnx  a_sim.onnx  tests.py  utils.py
plmap/: scan2map.cpp
py/: a.out  a.py  affine.py  alfredt.py  build_cython.sh  clientt.py  cvt.py  cython_bbox.c  cython_bbox.pyx  cython_t.c  draw3d_norm_dist.py  gitlabt.py  gnn_test.py  mdist.py  mianshi_solution.py  nms.py  output.xml  regt.py  setup.py  tt.py
torchcpp/: .gitignore  CMakeLists.txt  hand.cc
